Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "#Your code here\n",
     "import random\n",
-    "random.randint(1,4)"
+    "car = random.randint(1,4)\n"
    ]
   },
   {
