--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,8 @@
    "source": [
     "#Your code here\n",
     "import random\n",
-    "car = random.randint(1,4)\n"
+    "car = random.randint(1,4)\n",
+    "choice = "
    ]
   },
   {
