Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,8 @@
     "#Your code here\n",
     "import random\n",
     "car = random.randint(1,4)\n",
-    "choice = random.randint(1,4)"
+    "choice = random.randint(1,4)\n",
+    "goat"
    ]
   },
   {
