Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
     "import random\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
-    "goat"
+    "goatdoor = []"
    ]
   },
   {
