Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,6 +46,7 @@
    "source": [
     "#Your code here\n",
     "import random\n",
+    "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
     "goatdoor = []"
