--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
     "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
-    "goatdoor = []"
+    "goatdoor = "
    ]
   },
   {
