Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,6 +49,7 @@
     "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
+    "if car = \n",
     "goatdoor = doors.remove(choice)"
    ]
   },
