--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,8 @@
     "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
-    "if car = \n",
+    "if car = choice:\n",
+    "    \n",
     "goatdoor = doors.remove(choice)"
    ]
   },
