Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
     "if car = choice:\n",
-    "    goatdoor = random.choice(doors.remove(choice)"
+    "    goatdoor = random.choice(doors.remove(choice))"
    ]
   },
   {
