Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
     "choice = random.randint(1,4)\n",
     "if car = choice:\n",
     "    goatdoor = random.choice(doors.remove(choice))\n",
-    "else:"
+    "else:\n",
+    "    goatdoor = "
    ]
   },
   {
