Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "if car = choice:\n",
     "    goatdoor = random.choice(doors.remove(choice))\n",
     "else:\n",
-    "    goatdoor = "
+    "    goatdoor = doors."
    ]
   },
   {
