--- a/index.ipynb
+++ b/index.ipynb
@@ -49,6 +49,7 @@
     "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
+    "car\n",
     "if car = choice:\n",
     "    goatdoor = random.choice(doors.remove(choice))\n",
     "else:\n",
