--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
     "doors = [1,2,3]\n",
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
-    "car\n",
+    "carchoice = [car,ch]\n",
     "if car = choice:\n",
     "    goatdoor = random.choice(doors.remove(choice))\n",
     "else:\n",
