--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
     "if car = choice:\n",
     "    goatdoor = random.choice(doors.remove(choice))\n",
     "else:\n",
-    "    goatdoor = doors."
+    "    goatdoor = doors not in "
    ]
   },
   {
