Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,10 +50,8 @@
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
     "carchoice = [car,choice]\n",
-    "if car = choice:\n",
-    "    goatdoor = random.choice(doors.remove(choice))\n",
     "else:\n",
-    "    goatdoor = doors not in carchoice"
+    "    goatdoor = random.choice(doors not in carchoice"
    ]
   },
   {
