--- a/index.ipynb
+++ b/index.ipynb
@@ -29,18 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-46ef66021f6a>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-46ef66021f6a>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -51,7 +49,8 @@
     "choice = random.randint(1,4)\n",
     "carchoice = [car,choice]\n",
     "else:\n",
-    "    goatdoor = random.choice(doors not in carchoice"
+    "    goatdoor = random.choice(doors not in carchoice)\n",
+    "goatdoor"
    ]
   },
   {
