--- a/index.ipynb
+++ b/index.ipynb
@@ -52,8 +52,7 @@
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
     "carchoice = [car,choice]\n",
-    "goatdoor = random.choice(doors not in carchoice)\n",
-    "goatdoor"
+    "choic"
    ]
   },
   {
