Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,22 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "car"
+    "doors not in carchoice"
    ]
   },
   {
