--- a/index.ipynb
+++ b/index.ipynb
@@ -50,17 +50,29 @@
     "car = random.randint(1,4)\n",
     "choice = random.randint(1,4)\n",
     "carchoice = [car,choice]\n",
-    "choice"
+    "for i in carchoice:\n",
+    "    doors.remove(i)\n",
+    "goatdoor = random.choice(doors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "ran"
+    "\n"
    ]
   },
   {
