Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "carchoice = [car,choice]\n",
     "for i in carchoice:\n",
     "    doors.remove(i)\n",
-    "goatdoor = random.choice(doors)"
+    "goatdoor = random.choice(doors)\n"
    ]
   },
   {
